<resources>
    <string name="app_name">AgriKisan</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_my_nav">MyNavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Name</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="titleRegister">Register</string>
    <string name="phoneHint">Mobile Number</string>
    <string name="nameHint">Name</string>
    <string name="btnNext">Next</string>
    <string name="titleValidation">Enter Validation Code</string>
    <string name="otphint">A OTP has been sent to you</string>
    <string name="btnVerify">Verify</string>
    <string name="namePunjabi">Punjabi</string>
    <string name="namecrop">Crops</string>
    <string name="nameweather">Weather</string>
    <string name="namebuy">Buyerand Seller</string>
    <string name="namevideo">Videos</string>
    <string name="nameexpert">Expert</string>
    <string name="search_title" translatable="false">Search</string>
    <string name="enter_city_name" translatable="false">Enter city name</string>
    <string name="min_temp" translatable="false">%1$s\u2103</string>
    <string name="max_temp" translatable="false">%1$s\u2103</string>
    <string name="humidity" translatable="false">%1$s%%</string>
    <string name="pressure" translatable="false">%1$s hpa</string>
    <string name="sunrise" translatable="false">%1$s AM</string>
    <string name="sunset" translatable="false">%1$s PM</string>
    <string name="network_error_string" translatable="false">You are currently offline. Please check your connectivity settings and try again.</string>
    <string name="generic_error_string" translatable="false">The application has encountered an unknown error. Please try again.</string>
    <string name="temp_string" translatable="false">%1$s\u2103</string>
    <string name="last_updated_time" translatable="false">Last Updated: %1$s</string>
    <string name="open" translatable="false">Open</string>
    <string name="close" translatable="false">Close</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="barley" translatable="false">Barley is an annual plant, which means that it ends its life cycle in one year.The greatest quantity of produced barley is used as animal food.</string>
    <string name="barleySoil" translatable="false">Barley can be grown on a wide range of soil types;ranging from heavy clays to light or sandy loam soils.It grows well on fertile, deep loam soils with a pH of 6
to 7, 5. Soils with a pH lower than 6 may induce aluminium toxicity, leading to poor growth.</string>
    <string name="barleyIrrigation" translatable="false">Irrigation scheduling must be done according to evaporation and as per growth stage, because barley is more sensitive to stress during jointing, booting and heading.</string>
    <string name="barleyHarvest" translatable="false">Barley is ready for harvest in about 4 months after sowing.Barley can be harvested manually under small scale or combine harvesters can be used in large production scales</string>
    <string name="maize" translatable="false">Maize, also known as corn, is a cereal grain.Maize has become a staple food.</string>
    <string name="maizeSoil" translatable="false">Maize grows in a wide range of soils, ranging from temperate podzols to the leached red soils of the tropics. But, the best suitable soil for maize is deep, rich soils of the sub-tropics, where there is abundant nitrogen.</string>
    <string name="maizeIrrigation" translatable="false">Maize crop is sensitive to both moisture stress and excessive moisture, hence regulate irrigation according to the requirement.Ensure optimum moisture availability during the most critical phase (45 to 65 days after sowing); otherwise yield will be reduced by a considerable extent.</string>
    <string name="maizeHarvest" translatable="false">The ideal time to harvest your maize silage crop is when the whole plant dry matter is between 32- 40%.Harvesting a crop too early will result in a yield loss and potentially poor fermentation.</string>
    <string name="wheat" translatable="false">Wheat is the main cereal crop in India.Wheat is a grass widely cultivated for its seed, a cereal grain which is a worldwide staple food.</string>
    <string name="wheatSoil" translatable="false">Wheat is grown in a variety of soils of India. Soils with a clay loam or loam texture, good structure and moderate water holding capacity are ideal for wheat cultivation.</string>
    <string name="wheatIrrigation" translatable="false"> To harvest a good crop of wheat about 40 cm depth of water is used as evapotranspiration. There may be the need for 4-5 irrigations for wheat. In sandy loam soil 6-8 irrigations may be required whereas in heavy clay soil 3-4 irrigations are considered to be sufficient.</string>
    <string name="wheatHarvest" translatable="false">Wheat is harvested in the summer months, after being harvested in the spring or winter. The moisture content of the wheat is the most critical factor for determining when your wheat is ready for harvest.Grain is ready to harvest between 20% and 14% moisture.</string>
    <string name="rice" translatable="false">Rice is the most important human food crop in the world, directly feeding more people than any other crop.</string>
    <string name="riceSoil" translatable="false">Good amount of clay and organic matter are considered ideal for rice cultivation. It grows well in soils having a pH range between 5.5 and 6.5.</string>
    <string name="riceIrrigation" translatable="false"> Rice is typically grown in bunded fields that are continuously flooded up to 7−10 days before harvest. Continuous flooding helps ensure sufficient water and control weeds. On average, it takes 1,432 liters of water to produce 1 kg of rice in an irrigated lowland production system.</string>
    <string name="riceHarvest" translatable="false">Depending on the variety, a rice crop usually reaches maturity at around 105–150 days after crop establishment. Harvesting activities include cutting, stacking, handling, threshing, cleaning, and hauling.</string>
    <string name="cotton" translatable="false">Cotton is a soft, fluffy staple fiber that grows in a boll, or protective case, around the seeds of the cotton plants of the genus Gossypium</string>
    <string name="cottonSoil" translatable="false">The cotton favorite, sandy loam, is silt and clay that contains some sand. Loamy sand contains some silt and clay.</string>
    <string name="cottonIrrigation" translatable="false"> The total climatic water requirement of cotton is about 700-1000 mm, which depends on time of sowing and varies from genotype to genotype, region to region, soil to soil and scientific management to farmers management. </string>
    <string name="cottonHarvest" translatable="false">Cotton is a kharif crop which requires 6 to 8 months to mature. Its time of sowing and harvesting differs in different parts of the country depending upon the climatic conditions.</string>
    <string name="tomato" translatable="false">Rice is the most important human food crop in the world, directly feeding more people than any other crop.</string>
    <string name="tomatoSoil" translatable="false">Sandy loam is best for early tomatoes. Heavy clay loam is ideal for late tomatoes. Amend the soil with aged compost before planting. Tomatoes prefer a soil with a pH between 6.0 and 7.0, just below neutral in acidity.</string>
    <string name="tomatoIrrigation" translatable="false">The water requirement of outdoor grown tomatoes varies between 4000 - 6000 m³/ha. In greenhouses up to 10,000 m3/ha of water are required. 70% or more of the root system are in the upper 20 cm of the soil. Therefore, a drip system equipped with a fertigation device is advisable.</string>
    <string name="tomatoHarvest" translatable="false">Tomatoes require 90-140 days to mature from seed; 60-90 days from transplanting, depending on the variety.</string>
    <string name="cauliflower" translatable="false">Cauliflower is one of several vegetables in the species.It is an annual plant that reproduces by seed. Typically, only the head is eaten</string>
    <string name="cauliflowerSoil" translatable="false">Cauliflower needs at least 6 hours of full sun each day; more is better. It also needs fertile, well-drained, moist soil with plenty of rich organic matter. The soil pH should be between 6.5 and 6.8 for optimum growth and to discourage clubroot disease.</string>
    <string name="cauliflowerIrrigation" translatable="false">They need 2 inches of water each week; with normal rainfall, this usually requires supplemental watering. For best growth, side-dress the plants with a nitrogen fertilizer.</string>
    <string name="cauliflowerHarvest" translatable="false">Harvest cauliflower when heads are 6 to 8 inches (15-20 cm) in diameter but still compact and smooth. The cauliflower head is a collection of flower buds; harvest the head while it is white and before yellow buds start to open. </string>
    <string name="cane" translatable="false">Sugarcane, or sugar cane, are several species of tall perennial true grasses of the genus Saccharum.</string>
    <string name="caneSoil" translatable="false">Humid soils from 100 to 150 cm deep with good drainage are most suitable.It grows well in deep, well-drained soils of medium fertility of sandy loam soil textures with a pH range from 6.0 to 7.7.</string>
    <string name="caneIrrigation" translatable="false">Drip irrigation in sugarcane is a relatively new innovative technology that can conserve water, energy and increase profits.</string>
    <string name="inform" translatable="false">Empowering Rural India Digitally</string>
    <string name="about1" translatable="false">Empowering Rural India Digitally
    \nFarmers guarantee tomorrow’s food security. Next to this essential function of food provision, they also fulfill a number of additional roles that benefit the environment, the economy and society.

\n AgriKisan – A comprehensive and innovative agricultural portal helps rural communities drive efficiencies and sustainability. We help the farmers become more connected, integrated, and informed than ever before. We provide you the right information at the right time, from sowing, nurturing, protecting to harvesting your crops. Our portal helps you improve on-farm decision-making and execution, predict what is coming around the corner and act upon it more effectively.</string>
    <string name="infor" translatable="false">OTHER ATTRACTIVE OFFERINGS:</string>
    <string name="about2" translatable="false">
    The App contains various videos through which the farmers can gain knowledge.
\n Weather Forecasting help the farmers to take prediction and get fruitful result and work
according to weather.
\n Farmers can easily contact the sellers.
\n Farmers can also buy agricultural related products.</string>
    <string name="Info" translatable="false">CONNECT WITH EXPERTS NATIONWIDE</string>
    <string name="about3" translatable="false">
\n There is a real power in connectivity. Using our portal, connect with Subject/domain experts and other progressive farmers across the country to learn and discuss latest innovations in the farming sector, sustainable farming strategies, ideal ways to increase yields and how to use resources more efficiently and a lot more. We help you get accurate and quick solutions to all your day-to-day problems.</string>
</resources>